[project]
name = "mission-decoder"
version = "0.1.0"
description = ""
authors = [
    {name = "Sungwon Lee",email = "drsungwon@khu.ac.kr"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography (>=45.0.6,<46.0.0)"
]

[tool.poetry]
packages = [{include = "mission_decoder", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
